# testGPU

./: CMakeLists.txt
GPU/: Spline_Interpolation.cpp  Test_Example.cpp
Src/: cuda_fun.cu  cuda_fun.cuh  cuda_main.cpp  cuda_test.cpp  cuda_test.cu
